--- a/Docker/instant-ngp:v1/docker-compose.yml
+++ b/Docker/instant-ngp:v1/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   instant-ngp:
     # image: instantngp:latest
-    image: instantngp:v1
+    image: kindredbluespirit/instant-ngp:v1
     # build:
     #   context: ..
     #   dockerfile: ./.devcontainer/Dockerfile
